Adding seo meta tags

--- a/codeacross2016.html
+++ b/codeacross2016.html
@@ -1,5 +1,11 @@
 <head>
   <title>Code Across Brazil 2016</title>
+  <meta property="og:image" content="http://codeacross.openbrazil.org/img/banner.jpg">
+  <meta property="og:url" content="http://codeacross.openbrazil.org">
+  <meta property="og:title" content="Code Across Brazil 2016">
+  <meta property="og:description" content="No fim de semana de 5-6 de março de 2016, o CodeForAmerica irá realizar o seu quinto evento anual CodeAcross, e o OpenBrazil [<o>] CodeForBrazil participará pelo segundo ano.">
+  <meta name="description" content="No fim de semana de 5-6 de março de 2016, o CodeForAmerica irá realizar o seu quinto evento anual CodeAcross, e o OpenBrazil [<o>] CodeForBrazil participará pelo segundo ano.">
+  <meta name="keywords" content="Code Across, CodeAcross, Code For America, Code For Brazil, open source, dados abertos, Code For Curitiba, Code For All,Dia Internacional dos Dados Abertos, Open Source International Day">
 </head>
 
 <body>
@@ -101,8 +107,8 @@
             <div  class="col s12 m4 l4">
                 <div class="center promo promo-example">
                     <i class="mdi-action-language"></i>
-                    <h5 class="promo-caption">Dia Internacional ds Dados Abertos</h5>
-                    <p class="light center">CodeAcross é um fim de semana de eventos de hackers cívicos realizados por nossa rede em todo o mundo. Ele está programado para coincidir com o Dia Internacional ds Dados Abertos.</p>
+                    <h5 class="promo-caption">Dia Internacional dos Dados Abertos</h5>
+                    <p class="light center">CodeAcross é um fim de semana de eventos de hackers cívicos realizados por nossa rede em todo o mundo. Ele está programado para coincidir com o Dia Internacional dos Dados Abertos.</p>
                 </div>
             </div>
             <div class="col s12 m4 l4">
