Changing checkboxes for help text under submit button

--- a/codeacross2016.html
+++ b/codeacross2016.html
@@ -209,22 +209,31 @@
                         <label for="event_email">Email *</label>
                     </div>
 
-
-                    <div class="input-field col s12">
-                        <input type="checkbox" id="add_c4a" checked="checked"/>
-                        <label for="add_c4a">Me adicione na programação do International Code Across 2016 <a href="http://www.codeforamerica.org/events/codeacross-2016/">codeforamerica.org/events/codeacross-2016</a></label>
-                    </div>
-                    <div class="input-field col s12 block-end">
-                        <input type="checkbox" id="add_iodd" checked="checked"/>
-                        <label for="add_iodd">Me adicione na programação do Dia International dos Dados Abertos <a href="http://opendataday.org/">opendataday.org</a></label>
-                    </div>
-
                     <div class="col offset-s7 s5">
                         <button class="btn waves-effect waves-light light-blue darken-1" type="submit">Mandar
                             <i class="mdi-content-send right white-text"></i>
                         </button>
                         <div><small>*: campo obrigatório</small></div>
                     </div>
+
+                    <!--div class="input-field col s12">
+                        <input type="checkbox" id="add_c4a" checked="checked"/>
+                        <label for="add_c4a">Se adicione também na programação do International Code Across 2016: <a href="http://www.codeforamerica.org/events/codeacross-2016/">codeforamerica.org/events/codeacross-2016</a></label>
+                    </div>
+                    <div class="input-field col s12 block-end">
+                        <input type="checkbox" id="add_iodd" checked="checked"/>
+                        <label for="add_iodd">Se adicione também na programação do Dia International dos Dados Abertos: <a href="http://opendataday.org/">opendataday.org</a></label>
+                    </div-->
+
+                    <div class="col s12 grey-text">
+                        <p>
+                            Se adicione também na programação do International Code Across 2016: <a href="http://www.codeforamerica.org/events/codeacross-2016/">codeforamerica.org/events/codeacross-2016</a>
+                        </p>
+                        <p>
+                            Se adicione também na programação do Dia International dos Dados Abertos: <a href="http://opendataday.org/">opendataday.org</a>
+                        </p>
+                    </div>
+
                 </div>
             </form>
         </div>
