--- a/codeacross2016.html
+++ b/codeacross2016.html
@@ -227,10 +227,10 @@
 
                     <div class="col s12 grey-text">
                         <p>
-                            Se adicione também na programação do International Code Across 2016: <a href="http://www.codeforamerica.org/events/codeacross-2016/">codeforamerica.org/events/codeacross-2016</a>
+                            Adicione também seu evento na programação do International Code Across 2016: <a href="http://www.codeforamerica.org/events/codeacross-2016/">codeforamerica.org/events/codeacross-2016</a>
                         </p>
                         <p>
-                            Se adicione também na programação do Dia International dos Dados Abertos: <a href="http://opendataday.org/">opendataday.org</a>
+                            Adicione também seu evento na programação do Dia International dos Dados Abertos: <a href="http://opendataday.org/">opendataday.org</a>
                         </p>
                     </div>
 
